@@ -11,7 +11,7 @@ from trytond.wizard import Wizard, StateView, Button, StateTransition, \
 from trytond import backend
 from trytond.pool import Pool
 from trytond.transaction import Transaction
-from trytond.pyson import Eval, If
+from trytond.pyson import Eval
 from trytond.rpc import RPC
 
 __all__ = [
@@ -134,15 +134,6 @@ class Module(ModelSQL, ModelView):
                 if dep.name in name2id:
                     child_ids[name2id[dep.name]].append(child.id)
         return child_ids
-
-    @classmethod
-    def view_attributes(cls):
-        return [('/tree', 'colors',
-                If(Eval('state').in_(['to upgrade', 'to install']),
-                    'blue',
-                    If(Eval('state') == 'uninstalled',
-                        'grey',
-                        'black')))]
 
     @classmethod
     def delete(cls, records):
