@@ -1,3 +1,4 @@
+* Remove colors attribute on tree view
 * Remove style on Report
 * Add StateReport to Wizard
 * Allow to override ModelSQL._table
